--- a/changeTextColor.html
+++ b/changeTextColor.html
@@ -1,5 +1,5 @@
 <html>
-	<head><title>Set Interval</title></head>
+	<head><title>Change Color of Text</title></head>
 	<body>
 		<h1 id="1"> Color of this text will be changed in 3 sec </h1>
 		<input type="button" value="color change" onclick="setTimeout(change,3000)">
